k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoai-app-deployment
  labels:
    app: echoai-app  # 统一标签

spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoai-app  # Selector 一致
  template:
    metadata:
      labels:
        app: echoai-app  # Pod 的标签
    spec:
      containers:
        - name: spring-boot-container
          image: grexrr/echoai-app:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080  # 应用暴露的端口
