k8s/postgresql_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: echoai-app  # 与 Deployment 标签一致
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
